--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/picknik_reset_fault_controller
-	previous = 
-	base = 6d183a64ea14
+	previous = 6d183a64ea14
+	base = 16fec187d0dd
 	trim = 
 	trimbase = 
