--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/picknik_twist_controller
-	previous = 
-	base = 3b25e7bf6d27
+	previous = 3b25e7bf6d27
+	base = 9a47842314c8
 	trim = 
 	trimbase = 
