--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/picknik_twist_controller
+	parent = release/rolling/picknik_twist_controller/0.0.3-2
 	previous = 3b25e7bf6d27
 	base = a9eb0c222cee
 	trim = 
