--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/picknik_reset_fault_controller
+	parent = release/rolling/picknik_reset_fault_controller/0.0.3-2
 	previous = 6d183a64ea14
 	base = 8391beb7857f
 	trim = 
